# DS-project

./: CMakeLists.txt  List.cpp  List.h  README.md  priorityQueue (1).cpp  priorityQueue.cpp  queue.cpp  queue.h  task.cpp  task.h
DataStructures/: List.cpp  List.h  List.tpp  priorityQueue.cpp  priorityQueue.h  queue.cpp  queue.h  queue.tpp  task.cpp  task.h  time.cpp  time.h
application/: main.cpp  manager.cpp  manager.h  persistence.cpp  persistence.h  user.cpp  user.h
